header-overflow-fix

--- a/src/app/test-first/test-first.component.scss
+++ b/src/app/test-first/test-first.component.scss
@@ -12,6 +12,7 @@
         border-bottom: 1px solid rgb(0, 0, 0, 0.2);
         display: flex;
         align-items: center;
+        overflow: visible;
 
         .searching-container {
             flex: 33%;
@@ -49,8 +50,66 @@
 
         .function-wrapper {
             flex: 33%;
-            margin-right: 28px;
+            margin-right: 10px;
             text-align: right;
+            overflow: visible;
+
+            // Functions
+            // ---------
+            .header-function-button {
+                background-color: rgba(0, 0, 0, 0.1);
+                height: 32px;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+                border: 1px solid rgba(0, 0, 0, 0.12);
+                border-radius: 6px;
+                margin-left: 6px;
+            }
+
+            .dropbtn {
+                background-color: #04AA6D;
+                background-color: #6f879b;
+                color: white;
+                padding: 6px 12px;
+                font-size: 16px;
+                border: none;
+                cursor: pointer;
+                border-radius: 4px;
+                margin-left: 8px;
+                overflow: visible;
+            }
+              
+            .dropdown {
+                position: relative;
+                display: inline-block;
+                overflow: visible;
+            }
+              
+            .dropdown-content {
+                display: none;
+                position: absolute;
+                right: 0px;
+                background-color: #f9f9f9;
+                min-width: 160px;
+                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+                z-index: 100;
+            }
+              
+            .dropdown-content a {
+                color: black;
+                padding: 12px 16px;
+                text-decoration: none;
+                display: block;
+            }
+              
+            .dropdown-content a:hover {background-color: #e6e6e6;}
+            .dropdown:hover .dropdown-content {display: block;}
+            .dropdown:hover .dropbtn {background-color: #3e8e41;}
+            .dropdown:hover .dropbtn {background-color: #5f768a;}
+            
+
         }
     }
     
@@ -272,7 +331,7 @@
 
                 .main-content-header-container {
                     background-color: white;
-                    padding: 12px 16px;
+                    padding: 12px 28px;
                     height: 100px;
                     position: fixed;
                     width: calc(100% - 500px - 8px);
