--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,3 +64,6 @@ body {
     background-color: var(--background-color);
 }
 
+h1 {
+    font-size: 1.2em;
+}
